[gd_scene load_steps=5 format=3 uid="uid://fin4oq5j0lp"]

[ext_resource type="Script" path="res://ui/PauseMenu/InventoryScreen/InventoryScreen.gd" id="1_sgl4d"]
[ext_resource type="PackedScene" uid="uid://cbpy84v6pdfhh" path="res://ui/PauseMenu/ListMenuSideThing.tscn" id="2_hvcsr"]
[ext_resource type="PackedScene" uid="uid://bxtvcafv0r5t6" path="res://ui/PauseMenu/UseMenu.tscn" id="3_pj7bk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p522s"]

[node name="InventoryScreen" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sgl4d")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Tabs" type="TabContainer" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1280, 0)
layout_mode = 2
theme_override_colors/font_selected_color = Color(1, 0.843137, 0.552941, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/panel = SubResource("StyleBoxEmpty_p522s")

[node name="Usables" type="MarginContainer" parent="HBoxContainer/Tabs"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="UsablesList" type="VBoxContainer" parent="HBoxContainer/Tabs/Usables"]
unique_name_in_owner = true
layout_mode = 2

[node name="Weapons" type="MarginContainer" parent="HBoxContainer/Tabs"]
visible = false
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="WeaponsList" type="VBoxContainer" parent="HBoxContainer/Tabs/Weapons"]
unique_name_in_owner = true
layout_mode = 2

[node name="Armor" type="MarginContainer" parent="HBoxContainer/Tabs"]
visible = false
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="ArmorList" type="VBoxContainer" parent="HBoxContainer/Tabs/Armor"]
unique_name_in_owner = true
layout_mode = 2

[node name="Accessories" type="MarginContainer" parent="HBoxContainer/Tabs"]
visible = false
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="AcessoriesList" type="VBoxContainer" parent="HBoxContainer/Tabs/Accessories"]
unique_name_in_owner = true
layout_mode = 2

[node name="Materials" type="MarginContainer" parent="HBoxContainer/Tabs"]
visible = false
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="MaterialsList" type="VBoxContainer" parent="HBoxContainer/Tabs/Materials"]
unique_name_in_owner = true
layout_mode = 2

[node name="Key Items" type="MarginContainer" parent="HBoxContainer/Tabs"]
visible = false
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="KeyItemsList" type="VBoxContainer" parent="HBoxContainer/Tabs/Key Items"]
unique_name_in_owner = true
layout_mode = 2

[node name="Sidething" parent="HBoxContainer" instance=ExtResource("2_hvcsr")]
unique_name_in_owner = true
layout_mode = 2

[node name="Overlay" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
color = Color(0, 0, 0, 0.392157)

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="UseMenu" parent="Control" instance=ExtResource("3_pj7bk")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="noMoreItems" from="Control/UseMenu" to="." method="_on_use_menu_no_more_items"]
